{
  "version": 4,
  "terraform_version": "0.14.3",
  "serial": 363,
  "lineage": "2eaefb70-0ddf-ae54-4720-9570efe77975",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "worker_group_mgmt_one",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:969135465007:security-group/sg-09cf43fffa025d354",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-09cf43fffa025d354",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/8"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "worker_group_mgmt_one2022022411435588850000000b",
            "name_prefix": "worker_group_mgmt_one",
            "owner_id": "969135465007",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-064a82b0c13ced745"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "workers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:969135465007:security-group/sg-065bca05fc18fa425",
            "description": "Security group for all nodes in the cluster.",
            "egress": [],
            "id": "sg-065bca05fc18fa425",
            "ingress": [],
            "name": "atc-eks-dTxl8RNe2022022411435758770000000d",
            "name_prefix": "atc-eks-dTxl8RNe",
            "owner_id": "969135465007",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "atc-eks-dTxl8RNe-eks_worker_sg",
              "kubernetes.io/cluster/atc-eks-dTxl8RNe": "owned"
            },
            "tags_all": {
              "Name": "atc-eks-dTxl8RNe-eks_worker_sg",
              "kubernetes.io/cluster/atc-eks-dTxl8RNe": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-064a82b0c13ced745"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:969135465007:subnet/subnet-054e1f3b02cd6e58e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-054e1f3b02cd6e58e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "969135465007",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "atc-vpc-private-ap-south-1a",
              "kubernetes.io/cluster/atc-eks-dTxl8RNe": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "atc-vpc-private-ap-south-1a",
              "kubernetes.io/cluster/atc-eks-dTxl8RNe": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-064a82b0c13ced745"
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:969135465007:vpc/vpc-064a82b0c13ced745",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-02211d18c66f209e3",
            "default_route_table_id": "rtb-04808a1665ba9a146",
            "default_security_group_id": "sg-0e4cecfeb51addcd5",
            "dhcp_options_id": "dopt-01c3f874c4d7ef063",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-064a82b0c13ced745",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-04808a1665ba9a146",
            "owner_id": "969135465007",
            "tags": {
              "Name": "atc-vpc",
              "kubernetes.io/cluster/atc-eks-dTxl8RNe": "shared"
            },
            "tags_all": {
              "Name": "atc-vpc",
              "kubernetes.io/cluster/atc-eks-dTxl8RNe": "shared"
            }
          },
          "dependencies": [
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    }
  ]
}